# sql2json

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.rst  RELEASING.md  SECURITY.md  WORKFLOW.local.md  WORKFLOW.md  docker-compose.yml  pyproject.toml  roadmap.md
.circleci/: config.yml
.github/workflows/: ci.yml
docker/: config.json  initdb.sql
docs/: skill-sync.md
examples/python_api/: README.md  date_parameters.py  error_handling.py  json_columns.py  list_config.py  output_shapes.py  run_inline_sql.py  run_named_query.py  sql_file.py
references/: agent-sync.md
scripts/: install-skills.sh  sync-sql2json-skill.sh  test-integration.sh
skills/sql2json/: SKILL.md
sql2json/: __init__.py  __main__.py  sql2json.py
sql2json.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sql2json/parameter/: __init__.py  parameter_parser.py
tests/: conftest.py  test_cli.py  test_discovery.py  test_output_files.py  test_parameter.py  test_sql2json.py  test_transformations.py  test_write.py
tests/integration/: conftest.py  test_databases.py
