[project]
name = "sql2json"
version = "0.2.0"
description = "Tool to run a SQL query and convert result to JSON"
authors = [
    { name = "Francisco Perez", email = "fsistemas@gmail.com" }
]
dependencies = [
    "SQLAlchemy>=1.3.12", "fire>=0.2.1", "python-dateutil>=2.8.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "flake8>=3.7.9",
    "mypy>=0.761",
    "pytest>=5.3.2",
    "black>=19.10b0",
    "pre-commit>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
