[project]
name = "sql2json"
version = "0.2.0"
description = "Tool to run a SQL query and convert result to JSON"
authors = [
    { name = "Francisco Perez", email = "fsistemas@gmail.com" }
]
dependencies = [
    "SQLAlchemy>=1.3.12", "fire>=0.2.1", "python-dateutil>=2.8.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "flake8>=3.7.9",
    "mypy>=0.761",
    "pytest>=5.3.2",
    "pytest-cov>=4.0",
    "black>=19.10b0",
    "pre-commit>=1.10",
    "types-python-dateutil>=2.8",
]
integration = [
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real-database tests requiring docker-compose services (deselected by default; run with -m integration)",
]
addopts = "-m 'not integration'"

[tool.black]
# Pin the target so formatting is identical across the CI Python matrix
# (3.10–3.13) and locally, regardless of the interpreter running black.
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
files = ["sql2json"]

# fire ships no type stubs or py.typed marker, so mypy cannot analyze it.
# This is a narrow, documented ignore limited to that one third-party import.
[[tool.mypy.overrides]]
module = "fire"
ignore_missing_imports = true

[tool.coverage.run]
source = ["sql2json"]

[tool.coverage.report]
# Coverage currently sits at ~97%; gate at 90% to leave headroom for small
# changes while keeping a strong floor. Raise as coverage improves.
fail_under = 90
show_missing = true
