[project]
name = "sql2json"
version = "0.2.0"
description = "Tool to run a SQL query and convert result to JSON"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Francisco Perez", email = "fsistemas@gmail.com" }
]
keywords = ["sql", "json", "csv", "sqlalchemy", "cli", "etl", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "SQLAlchemy>=1.3.12", "fire>=0.2.1", "python-dateutil>=2.8.1",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/fsistemas/sql2json"
Repository = "https://github.com/fsistemas/sql2json"
Issues = "https://github.com/fsistemas/sql2json/issues"
Changelog = "https://github.com/fsistemas/sql2json/blob/master/CHANGELOG.md"

[project.optional-dependencies]
# User-facing database driver extras: pip install "sql2json[postgres]" etc.
postgres = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.1"]
dev = [
    "flake8>=3.7.9",
    "mypy>=0.761",
    "pytest>=5.3.2",
    "pytest-cov>=4.0",
    "black>=19.10b0",
    "pre-commit>=1.10",
    "types-python-dateutil>=2.8",
]
# Drivers needed for the real-database integration suite (PostgreSQL + MySQL).
integration = [
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real-database tests requiring docker-compose services (deselected by default; run with -m integration)",
]
addopts = "-m 'not integration'"

[tool.black]
# Pin the target so formatting is identical across the CI Python matrix
# (3.10–3.13) and locally, regardless of the interpreter running black.
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
files = ["sql2json"]

# fire ships no type stubs or py.typed marker, so mypy cannot analyze it.
# This is a narrow, documented ignore limited to that one third-party import.
[[tool.mypy.overrides]]
module = "fire"
ignore_missing_imports = true

[tool.coverage.run]
source = ["sql2json"]

[tool.coverage.report]
# Coverage currently sits at ~97%; gate at 90% to leave headroom for small
# changes while keeping a strong floor. Raise as coverage improves.
fail_under = 90
show_missing = true
